...
    deinit {
        appearanceObserver?.invalidate()
    }
    
    func setupWinLabel() {
        winLabel = NSTextField(labelWithString: "You did it!")
        winLabel.setAccessibilityIdentifier("WinLabel")
        winLabel.font = NSFont.boldSystemFont(ofSize: 48)
        
        let isDarkMode = view.effectiveAppearance.bestMatch(from: [.darkAqua, .aqua]) == .darkAqua
        winLabel.textColor = isDarkMode ? .systemYellow : .systemOrange
        winLabel.alignment = .center
        winLabel.isHidden = true
...
